styles/globals.css
@font-face {
  font-family: 'Futura';
  src: url("/fonts/futura-medium-bt.ttf");
  font-display: swap;
}

html,
body {
  overflow-x: hidden;
  padding: 0;
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
}

body {
  overscroll-behavior-y: none;
}

a {
  color: inherit;
  text-decoration: none;
}

* {
  box-sizing: border-box;
}

::-webkit-scrollbar {
  display: none;
  width: 0px;
}

div[data-framer-component-type='Text'] span {
  font-size: var(--framer-font-size) !important;
  line-height: var(--framer-line-height) !important;
}

